feat: delete fields
