# routes/api.php
@@ -1,7 +1,5 @@
 <?php
 
-use App\Http\Controllers\CityController;
-use App\Http\Controllers\CountryController;
 use App\Http\Controllers\DegreeController;
 use App\Http\Controllers\UserController;
 use Illuminate\Http\Request;
@@ -22,8 +20,6 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 	return $request->user();
 });
 
-Route::get('/countries', [CountryController::class, 'index']);
-Route::get('/cities', [CityController::class, 'index']);
 Route::get('/degrees', [DegreeController::class, 'index']);
 
 Route::controller(UserController::class)->group(function () {
